fix readme + slight fix notebook header

--- a/2015-US-Flights.ipynb
+++ b/2015-US-Flights.ipynb
@@ -5,9 +5,9 @@
    "id": "9dfa58d1",
    "metadata": {},
    "source": [
-    "<h1>Final project</h1>\n",
+    "<h1>2015 US Flights Analysis</h1>\n",
     "\n",
-    "By Vu Anh Quan Nguyen - a1841411"
+    "By Vu Anh Quan Nguyen"
    ]
   },
   {
